# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "callbackonnotifyresourceinfo_fuzzer:fuzztest",
    "callbacksinkonhardwarestatechangedinner_fuzzer:fuzztest",
    "callbacksinkonremoterequest_fuzzer:fuzztest",
    "encodeonerror_fuzzer:fuzztest",
    "encodeoninputbufferavailable_fuzzer:fuzztest",
    "encodeonoutputbufferavailable_fuzzer:fuzztest",
    "encodeonoutputformatchanged_fuzzer:fuzztest",
    "onsinklocalcamsrvdied_fuzzer:fuzztest",
    "sinkhandlerinitsink_fuzzer:fuzztest",
    "sinkhandlerpausedistributedhardware_fuzzer:fuzztest",
    "sinkhandlerregisterprivacyresources_fuzzer:fuzztest",
    "sinkhandlerreleasesink_fuzzer:fuzztest",
    "sinkhandlerresumedistributedhardware_fuzzer:fuzztest",
    "sinkhandlerstopdistributedhardware_fuzzer:fuzztest",
    "sinkhandlersubscribelocalhardware_fuzzer:fuzztest",
    "sinkhandlerunsubscribelocalhardware_fuzzer:fuzztest",
    "sinkonloadsystemabilityfail_fuzzer:fuzztest",
    "sinkonloadsystemabilitysuccess_fuzzer:fuzztest",
    "sinkproxychannelneg_fuzzer:fuzztest",
    "sinkproxyclosechannel_fuzzer:fuzztest",
    "sinkproxygetcamerainfo_fuzzer:fuzztest",
    "sinkproxyinitsink_fuzzer:fuzztest",
    "sinkproxyopenchannel_fuzzer:fuzztest",
    "sinkproxyreleasesink_fuzzer:fuzztest",
    "sinkproxystopcapture_fuzzer:fuzztest",
    "sinkproxysubscribelocalhardware_fuzzer:fuzztest",
    "sinkproxyunsubscribelocalhardware_fuzzer:fuzztest",
    "sinkservicechannelneg_fuzzer:fuzztest",
    "sinkserviceclosechannel_fuzzer:fuzztest",
    "sinkservicegetcamerainfo_fuzzer:fuzztest",
    "sinkservicedump_fuzzer:fuzztest",
    "sinkservicegetdumpinfo_fuzzer:fuzztest",
    "sinkserviceinitsink_fuzzer:fuzztest",
    "sinkserviceopenchannel_fuzzer:fuzztest",
    "sinkservicepausedistributedhardware_fuzzer:fuzztest",
    "sinkservicereleasesink_fuzzer:fuzztest",
    "sinkserviceremoveaccesslistener_fuzzer:fuzztest",
    "sinkserviceresumedistributedhardware_fuzzer:fuzztest",
    "sinkservicesetaccesslistener_fuzzer:fuzztest",
    "sinkservicesetauthorizationresult_fuzzer:fuzztest",
    "sinkservicestopcapture_fuzzer:fuzztest",
    "sinkservicestopdistributedhardware_fuzzer:fuzztest",
    "sinkservicesubscribelocalhardware_fuzzer:fuzztest",
    "sinkserviceunsubscribelocalhardware_fuzzer:fuzztest",
    "softbusonsinkbytesreceived_fuzzer:fuzztest",
    "softbusonsinkmessagereceived_fuzzer:fuzztest",
    "softbusonsinksessionclosed_fuzzer:fuzztest",
    "softbusonsinksessionopened_fuzzer:fuzztest",
    "softbusonsinkstreamreceived_fuzzer:fuzztest",
  ]
}
