# Copyright (c) 2022 - 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "callbackonnotifyregresult_fuzzer:fuzztest",
    "callbackonnotifyunregresult_fuzzer:fuzztest",
    "callbackonremoterequest_fuzzer:fuzztest",
    "decodeoninputbufferavailable_fuzzer:fuzztest",
    "decodeonoutputbufferavailable_fuzzer:fuzztest",
    "onsourcelocalcamsrvdied_fuzzer:fuzztest",
    "softbusadapter_fuzzer:fuzztest",
    "softbusonsourcebytesreceived_fuzzer:fuzztest",
    "softbusonsourcemessagereceived_fuzzer:fuzztest",
    "softbusonsourcesessionclosed_fuzzer:fuzztest",
    "softbusonsourcesessionopened_fuzzer:fuzztest",
    "softbusonsourcestreamreceived_fuzzer:fuzztest",
    "softbushandlesourcestreamext_fuzzer:fuzztest",
    "sourcehandlerconfigdistributedhardware_fuzzer:fuzztest",
    "sourcehandlerinitsource_fuzzer:fuzztest",
    "sourcehandlerregisterdistributedhardware_fuzzer:fuzztest",
    "sourcehandlerunregisterdistributedhardware_fuzzer:fuzztest",
    "sourceonloadsystemabilityfail_fuzzer:fuzztest",
    "sourceonloadsystemabilitysuccess_fuzzer:fuzztest",
    "sourceproxydcameranotify_fuzzer:fuzztest",
    "sourceproxyinitsource_fuzzer:fuzztest",
    "sourceproxyregisterdistributedhardware_fuzzer:fuzztest",
    "sourceproxyunregisterdistributedhardware_fuzzer:fuzztest",
    "sourceservicedcameranotify_fuzzer:fuzztest",
    "sourceservicedump_fuzzer:fuzztest",
    "sourceservicegetdumpinfo_fuzzer:fuzztest",
    "sourceservicecamdeverase_fuzzer:fuzztest",
    "sourceserviceinitsource_fuzzer:fuzztest",
    "sourceserviceregisterdistributedhardware_fuzzer:fuzztest",
    "sourceservicereleasesource_fuzzer:fuzztest",
    "sourceserviceunregisterdistributedhardware_fuzzer:fuzztest",
    "sourceserviceupdateworkmode_fuzzer:fuzztest",
  ]
}
