# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributedcamera/distributedcamera.gni")

##############################fuzztest##########################################
ohos_fuzztest("DCameraSinkHandlerIpcFuzzTest") {
  module_out_path = "distributed_camera/dcamerasinkhandleripc"

  fuzz_config_file =
      "${innerkits_path}/native_cpp/test/fuzztest/dcamerasinkhandleripc_fuzzer"

  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${innerkits_path}/native_cpp/camera_sink/include",
    "//foundation/distributedhardware/distributedcamera/common/include/constants",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "dcamera_sink_handler_ipc_fuzzer.cpp" ]

  deps = [
    "${fwk_utils_path}:distributedhardwareutils",
    "${innerkits_path}/native_cpp/camera_sink:distributed_camera_sink_sdk",
    "//utils/native/base:utils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DCameraSinkHandlerIpcFuzzTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":DCameraSinkHandlerIpcFuzzTest" ]
}
###############################################################################
