# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

##############################fuzztest##########################################
ohos_fuzztest("SinkProxySubscribeLocalHardwareFuzzTest") {
  module_out_path = "${fuzz_test_output_path}/sinkproxysubscribelocalhardware"

  fuzz_config_file = "${innerkits_path}/native_cpp/test/sinkfuzztest/sinkproxysubscribelocalhardware_fuzzer"

  include_dirs = [
    "include",
    "${common_path}/include",
    "${common_path}/include/constants",
    "${innerkits_path}/native_cpp/camera_sink/include",
    "${innerkits_path}/native_cpp/camera_sink/include/callback",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "sinkproxysubscribelocalhardware_fuzzer.cpp" ]

  deps = [
    "${common_path}:distributed_camera_utils",
    "${innerkits_path}/native_cpp/camera_sink:distributed_camera_sink_sdk",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SinkProxySubscribeLocalHardwareFuzzTest\"",
    "LOG_DOMAIN=0xD004150",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":SinkProxySubscribeLocalHardwareFuzzTest" ]
}
###############################################################################
