# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

##############################fuzztest##########################################
ohos_fuzztest("SinkServiceReleaseSinkFuzzTest") {
  module_out_path = "${fuzz_test_output_path}/sinkservicereleasesink"

  fuzz_config_file = "${innerkits_path}/native_cpp/test/sinkfuzztest/sinkservicereleasesink_fuzzer"

  include_dirs = [
    "include",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${innerkits_path}/native_cpp/camera_sink/include",
    "${innerkits_path}/native_cpp/camera_sink/include/callback",
    "${services_path}/cameraservice/base/include",
    "${services_path}/cameraservice/cameraoperator/client/include",
    "${services_path}/cameraservice/sinkservice/include/distributedcamera",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr/interface",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr/eventbus",
    "${services_path}/data_process/include/utils",
    "${services_path}/channel/include",
    "${feeding_smoother_path}/base",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sources = [ "sinkservicereleasesink_fuzzer.cpp" ]

  deps = [
    "${common_path}:distributed_camera_utils",
    "${innerkits_path}/native_cpp/camera_sink:distributed_camera_sink_sdk",
    "${services_path}/cameraservice/sinkservice:distributed_camera_sink",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SinkServiceReleaseSinkFuzzTest\"",
    "LOG_DOMAIN=0xD004150",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "distributed_hardware_fwk:distributedhardwareutils",
    "drivers_interface_distributed_camera:libdistributed_camera_provider_proxy_1.1",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":SinkServiceReleaseSinkFuzzTest" ]
}
###############################################################################
