# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

##############################fuzztest##########################################
ohos_fuzztest("SoftbusOnSourceSessionOpenedFuzzTest") {
  module_out_path = "${fuzz_test_output_path}/softbusonsourcesessionopened"

  fuzz_config_file = "${innerkits_path}/native_cpp/test/sourcefuzztest/softbusonsourcesessionopened_fuzzer"

  include_dirs = [ "${services_path}/cameraservice/base/include" ]

  include_dirs += [
    "${services_path}/channel/include",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${feeding_smoother_path}/base",
    "${feeding_smoother_path}/derived",
    "${feeding_smoother_path}/utils",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "softbusonsourcesessionopened_fuzzer.cpp" ]

  deps = [
    "${common_path}:distributed_camera_utils",
    "${services_path}/channel:distributed_camera_channel",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SoftbusOnSourceSessionOpenedFuzzTest\"",
    "LOG_DOMAIN=0xD004150",
  ]

  external_deps = [
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":SoftbusOnSourceSessionOpenedFuzzTest" ]
}
###############################################################################
