# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

##############################fuzztest##########################################
ohos_fuzztest("SourceServiceInitSourceFuzzTest") {
  module_out_path = "${fuzz_test_output_path}/sourceserviceinitsource"

  fuzz_config_file = "${innerkits_path}/native_cpp/test/sourcefuzztest/sourceserviceinitsource_fuzzer"

  include_dirs = [
    "${innerkits_path}/native_cpp/camera_source/include/callback",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${innerkits_path}/native_cpp/camera_source/include",
    "${innerkits_path}/native_cpp/camera_source/include/callback",
    "${services_path}/cameraservice/base/include",
    "${services_path}/cameraservice/sourceservice/include/distributedcamera",
    "${services_path}/cameraservice/sourceservice/include/distributedcameramgr",
    "${services_path}/cameraservice/sourceservice/include/distributedcameramgr/dcameracontrol",
    "${services_path}/cameraservice/sourceservice/include/distributedcameramgr/dcameradata",
    "${services_path}/cameraservice/sourceservice/include/distributedcameramgr/dcamerahdf",
    "${services_path}/cameraservice/sourceservice/include/distributedcameramgr/dcamerainterface",
    "${services_path}/cameraservice/sourceservice/include/distributedcameramgr/dcamerastate",

    "${fwk_utils_path}/include",
    "${fwk_utils_path}/include/eventbus",
    "${fwk_common_path}/utils/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "sourceserviceinitsource_fuzzer.cpp" ]

  deps = [
    "${common_path}:distributed_camera_utils",
    "${innerkits_path}/native_cpp/camera_source:distributed_camera_source_sdk",
    "${services_path}/cameraservice/sourceservice:distributed_camera_source",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SourceServiceInitSourceFuzzTest\"",
    "LOG_DOMAIN=0xD004150",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "drivers_interface_distributed_camera:libdistributed_camera_provider_proxy_1.0",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":SourceServiceInitSourceFuzzTest" ]
}
###############################################################################
