# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

config("module_private_config") {
  include_dirs = [
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//drivers/peripheral/camera/interfaces/metadata/include",
    "//third_party/jsoncpp/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${graphicstandard_path}/frameworks/surface/include",
    "${camerastandard_path}/interfaces/inner_api/native/camera/include",
    "${camerastandard_path}/interfaces/inner_api/native/camera/include/input",
    "${camerastandard_path}/interfaces/inner_api/native/camera/include/output",
    "${camerastandard_path}/interfaces/inner_api/native/camera/include/session",
    "${camerastandard_path}/services/camera_service/binder/base/include",
    "${camerastandard_path}/services/camera_service/binder/client/include",
    "${camerastandard_path}/services/camera_service/binder/server/include",
    "${camerastandard_path}/services/camera_service/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
  ]

  include_dirs += [
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${services_path}/cameraservice/base/include",
    "${services_path}/cameraservice/cameraoperator/client/include",
    "${services_path}/cameraservice/cameraoperator/client/include/callback",
    "${services_path}/cameraservice/cameraoperator/client/include/listener",
  ]
}

ohos_executable("dcamera_client_demo") {
  install_enable = false

  sources = [ "main.cpp" ]

  configs = [ ":module_private_config" ]

  cflags = [
    "-fPIC",
    "-Wall",
  ]

  if (!distributed_camera_common) {
    cflags += [ "-DDCAMERA_YUV" ]
  }

  deps = [
    "${camerastandard_path}/frameworks/native/camera:camera_framework",
    "${common_path}:distributed_camera_utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "${graphicstandard_path}:libsurface",
    "${services_path}/cameraservice/cameraoperator/client:distributed_camera_client",
    "${services_path}/cameraservice/sinkservice:distributed_camera_sink",
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//drivers/peripheral/camera/interfaces/metadata:metadata",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "drivers_interface_distributed_camera:libdistributed_camera_provider_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_player_framework:media_client",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DCameraClientDemo\"",
    "LOG_DOMAIN=0xD004100",
  ]

  cflags_cc = cflags

  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
