# Copyright (c) 2022 - 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

config("module_private_config") {
  include_dirs = [
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${services_path}/cameraservice/base/include",
    "${services_path}/cameraservice/cameraoperator/client/include",
    "${services_path}/cameraservice/cameraoperator/client/include/callback",
    "${services_path}/cameraservice/cameraoperator/client/include/listener",
  ]
}

ohos_executable("dcamera_client_demo") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  install_enable = false

  sources = [ "main.cpp" ]

  configs = [ ":module_private_config" ]

  cflags = [
    "-fPIC",
    "-Wall",
  ]

  if (!distributed_camera_common) {
    cflags += [ "-DDCAMERA_YUV" ]
  }

  deps = [
    "${common_path}:distributed_camera_utils",
    "${services_path}/cameraservice/cameraoperator/client:distributed_camera_client",
    "${services_path}/cameraservice/sinkservice:distributed_camera_sink",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "av_codec:av_codec_client",
    "cJSON:cjson",
    "c_utils:utils",
    "camera_framework:camera_framework",
    "distributed_hardware_fwk:distributedhardwareutils",
    "drivers_interface_camera:metadata",
    "drivers_interface_distributed_camera:libdistributed_camera_provider_proxy_1.1",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DCameraClientDemo\"",
    "LOG_DOMAIN=0xD004150",
  ]

  cflags_cc = cflags

  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
